# infur

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yaml
compare/: Cargo.toml
compare/src/: main.rs
ff-video/: Cargo.toml
ff-video/src/: decoder.rs  error.rs  lib.rs  parse.rs
image-ext/: Cargo.toml
image-ext/src/: image_bgr.rs  lib.rs
infur/: Cargo.toml
infur-test-gen/: Cargo.toml  build.rs
infur-test-gen/src/: lib.rs
infur/src/: app.rs  decode_predict.rs  gui.rs  main.rs  predict_onnx.rs  processing.rs
src/: image_bgr.rs  main.rs  parse.rs
