[workspace]
resolver = "2"

[package]
name = "compare"
version = "0.1.0"
edition = "2021"
description = "compare different onnx runtimes"

[dependencies]
anyhow = "1.0"
pico-args = "0.5"
tracing-subscriber = "0.3"
# need onnxruntime .14 for 0-dim input tolerance (not in .13),
# then furhtermore need master to resolve ndarray with tract-core...
onnxruntime = { git = "https://github.com/nbigaouette/onnxruntime-rs" }
tract-onnx = "0.17"
image-ext = { path = "../image-ext" }
ff-video = { path = "../ff-video" }

[profile.dev.package]
image-ext = { opt-level = 3 }
tract-core = { opt-level = 3 }
tract-onnx = { opt-level = 3 }
tract-onnx-opl = { opt-level = 3 }
