[package]
name = "infur"
version = "0.1.0"
edition = "2021"
description = "show case onnx model inference on video stream"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
stable-eyre = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt"], default-features = false }
eframe = { version = "0.19", features = ["wgpu"] }
# need onnxruntime .14 for 0-dim input tolerance (not in .13),
# then furhtermore need master to resolve ndarray with tract-core...
onnxruntime = { git = "https://github.com/nbigaouette/onnxruntime-rs" }
image-ext = { path = "../image-ext" }
ff-video = { path = "../ff-video" }

[dev-dependencies]
infur-test-gen = { "path" = "../infur-test-gen" }
