[package]
name = "infur"
description.workspace = true
version.workspace = true
edition.workspace = true

[features]
default = ["persistence"]
persistence = ["eframe/persistence"]

[dependencies]
fast_image_resize.workspace = true
onnxruntime.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
once_cell = "1"
eframe = { version = "0.19", features = ["wgpu", "default_fonts"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt"], default-features = false }
stable-eyre = "0.2"
image-ext = { path = "../image-ext" }
ff-video = { path = "../ff-video" }

[dev-dependencies]
infur-test-gen = { "path" = "../infur-test-gen" }
